fixed pixel shift on device select

--- a/assets/thinx/css/custom.css
+++ b/assets/thinx/css/custom.css
@@ -463,7 +463,7 @@
 
 .device-block {
   padding: 20px;
-  padding-right: 10px;
+  /*padding-right: 10px;*/
 }
 .device-block > div {
   padding: 20px;
@@ -497,7 +497,7 @@
   width: 16px;
   height: 16px;
   top: 41px;
-  right: 34px;
+  right: 43.5px;
   pointer-events: none;
 }
 
